--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -124,7 +124,7 @@
       console.log('Successful login for: ' + response.name);
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
-      //  window.location = "http://yadas-macbook-air.local:3000/loggedIn"; 
+        window.location = "http://yadas-macbook-air.local:3000/loggedIn"; 
     });
   }
 </script>
